# wfm-staffing-app

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/workflows/: deploy_azure_webapp.yml  main_wfm-interval-staffing.yml  main_wfm-staff-app.yml  workflow_dispatch.yml
app/: Home.py
app/pages/: 1_Interval_Calculator.py  2_Interval_Staffing_Table.py  3_Monte_Carlo_Mode.py  9_Methodology.py
data/: sample_inputs.csv  sample_intraday_profile_15min.csv
data/.github/workflows/: deploy_azure_webapp.yml
src/: __init__.py  kv.py
src/wfm/: __init__.py  erlangc.py  io.py  monte_carlo.py  patterns.py  staffing.py  validation.py
src/wfm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/wfm_staffing_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_erlangc.py  test_monte_carlo.py  test_staffing.py  test_validation.py
