[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wfm-staffing-app"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "streamlit==1.38.0",
  "pandas==2.2.2",
  "numpy==2.0.1",
  "python-dateutil==2.9.0.post0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["wfm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]